--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
@@ -26,10 +27,13 @@
     "express-session": "^1.17.3",
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
+    "libphonenumber-js": "^1.12.33",
     "mammoth": "^1.11.0",
     "mongoose": "^8.0.0",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.12",
     "openai": "^4.20.0",
+    "otp-generator": "^4.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pdf-parse": "^2.4.5",
